--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     text-transform: capitalize;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 #myLInks a{
     text-decoration: none;
@@ -43,8 +44,9 @@ body{
 .contact-us{
     background-color: rgba(0, 0, 0, 0.952);
     margin: auto;
-    width: 90%;
+    width: 100%;
     height: auto;
+    margin-top: 25px;
 }
 iframe{
     border: 0;
@@ -67,10 +69,157 @@ form label{
     align-items: center;
     background-color: #14A44D;
     padding: 25px;
+    border-radius: 10px;
+    margin-bottom: 15px;
 }
 .icon-2{
     display: block;
     font-size: 30px;
+}
+.col-wrapper{
+    padding: 25px;
+}
+.card{
+    margin: auto;
+    height: 25rem;
+    background-position: center;
+    background-size: cover;
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    position: relative;
+    border-radius: 10px;
+}
+.card-1{
+    background-image: url(photos/image4.jpg);
+}
+.card-2{
+    background-image: url(photos/image5.jpg);
+}
+.card-3{
+    background-image: url(photos/image6.jpg);
+}
+.card-4{
+    background-image: url(photos/image7.jpg);
+}
+.card-5{
+    background-image: url(photos/image8.jpg);
+}
+.card-6{
+    background-image: url(photos/image9.jpg);
+}
+.shape{
+    position: absolute;
+    display: block;
+    top: 0;
+    height: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 25px;
+}
+.content span{
+    color: #D3AD7F;
+    font-size: 25px;
+}
+.content p{
+    font-size: 13px;
+}
+.content > *{
+    margin-top: 15px;
+}
+.read{
+    text-decoration: none;
+    background-color: #C7A17A;
+    color: white;
+    display: block;
+    padding: 15px;
+    text-align: center;
+    width: 200px;
+    margin-top: 100px;
+}
+.read:hover{
+    color: black;
+}
+.wrapper{
+    padding: 25px;
+}
+.footer{
+    background-image: url(photos/image11.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    padding: 30px;
+    position: relative;
+}
+.shade{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.712);
+    z-index: 0;
+}
+.address{
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+    z-index: 1;
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+}
+.address img{
+    display: inline-block;
+}
+.subcribe{
+    background-color: #D3AD7F;
+}
+.footer-text{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    position: relative;
+    z-index: 1;
+    margin-top: 55px;
+}
+.footer-text img{
+    display: block;
+    margin-bottom: 20px;
+}
+.social a{
+    font-size: 25px;
+    margin-left: 25px;
+}
+.image-size{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+.content-2{
+    background-color: #13131A;
+    padding: 60px;
+}
+.content-2 h1{
+    font-size: 35px;
+}
+.content-2 p{
+    margin-top: 40px;
+    width: 85%;
+}
+.content-2 span{
+    background-color: #C7A17A;
+    padding: 5px 20px;
+    display: inline-block;
+    font-size: 12px;
+    margin-bottom: 20px;
 }
 
   @media only screen and (max-width: 599px){
@@ -98,6 +247,7 @@ form label{
     }
     .contact-us{
         width: 100%;
+        margin-top: 0px;
     }
     iframe{
         height: 250px;
@@ -112,15 +262,54 @@ form label{
     .frame-container,.form-container{
         padding: 25px;
     }
-
+    #show{
+        padding: 20px;
+    }
+    .col-wrapper{
+        padding: 10px;
+    }
+    .wrapper{
+        padding: 10px;
+    }
+    .address{
+        width: 100%;
+        flex-direction: column;
+        margin-top: 0;
+        justify-content: flex-start;
+    }
+    .address > *{
+        margin-top: 25px;
+    }
+    .footer{
+        padding: 10px;
+        padding-bottom: 30px;
+    }
+    .footer-text{
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    .social a:first-child{
+        margin-left: 0;
+    }
+    .social{
+        margin-top: 15px;
+    }
+    .content-2 p{
+        width: 100%;
+    }
   }
 
   @media only screen and (min-width: 600px) {
     /* For tablets: */
-    
+    iframe{
+        height: 280px;
+    }
   }
   
   @media only screen and (min-width: 768px) {
     /* For desktop: */
-    
+    iframe{
+        height: 500px;
+    }
   }
